--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 -->
 <html lang="en">
   <head>
+<!--test-->
     <meta charset="UTF-8">
     <title>Social Media Starter (HTML Only)</title>
     <!-- TODO (CSS): Link an external stylesheet here, e.g.:
